# shiioo

./: .gitignore  .mise.toml  Cargo.toml  EXAMPLES.md  LICENSE  PHASE10_EXAMPLES.md  PHASE3_EXAMPLES.md  PHASE4_EXAMPLES.md  PHASE5_EXAMPLES.md  PHASE6_EXAMPLES.md  PHASE7_EXAMPLES.md  PHASE8_EXAMPLES.md  PHASE9_EXAMPLES.md  POLICY_EXAMPLES.md  README.md
crates/core/: Cargo.toml
crates/core/src/: analytics.rs  approval.rs  audit.rs  capacity.rs  claude_compiler.rs  cluster.rs  compliance.rs  config_change.rs  events.rs  lib.rs  metrics.rs  organization.rs  policy.rs  rbac.rs  scheduler.rs  secrets.rs  template.rs  tenant.rs  types.rs  workflow.rs
crates/core/src/storage/: blob.rs  event_log.rs  index.rs  mod.rs  tenant_storage.rs
crates/core/src/workflow/: advanced.rs  dag.rs  executor.rs  mod.rs  step_executor.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/mcp/src/tools/: context.rs  mod.rs  registry.rs  repo.rs  web.rs
crates/sdk/: Cargo.toml
crates/sdk/examples/: approvals.rs  basic_usage.rs  create_job.rs  multi_tenant.rs  routines.rs  websocket_subscriptions.rs
crates/sdk/src/: client.rs  config.rs  error.rs  lib.rs
crates/sdk/src/api/: analytics.rs  approval_boards.rs  approvals.rs  audit.rs  capacity.rs  cluster.rs  compliance.rs  config_changes.rs  health.rs  jobs.rs  metrics.rs  mod.rs  organizations.rs  policies.rs  rbac.rs  roles.rs  routines.rs  runs.rs  secrets.rs  security.rs  templates.rs  tenants.rs
crates/sdk/src/stream/: mod.rs
crates/sdk/src/transport/: http.rs  mod.rs  websocket.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  ui.rs  ui_placeholder.html  websocket.rs
crates/server/src/api/: handlers.rs  mod.rs
crates/server/src/graphql/: mod.rs  schema.rs
crates/server/src/middleware/: auth.rs
crates/server/static/: dashboard-enhanced.html  dashboard.html
