[package]
name = "shiioo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
redb = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
petgraph = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
cron = { workspace = true }
walkdir = { workspace = true }
base64 = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.15"
