[package]
name = "shiioo-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "shiioo"
path = "src/main.rs"

[dependencies]
# Local crates
shiioo-core = { path = "../core" }
shiioo-mcp = { path = "../mcp" }

# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }

# Additional server-specific deps
clap = { version = "4.5", features = ["derive", "env"] }
rust-embed = "8.5"
mime_guess = "2.0"
futures = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
